invest-app/main/default/objects/InvestmentUpdate__c/InvestmentUpdate__c.object-meta.xml
<CustomObject>
    <description>Individual changes to the investment, e.g. deposits, withdrawals or balance updates</description>
    <label>Investment Update</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>InvestmentChange Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>