invest-app/main/default/objects/InvestmentUpdate__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of change, e.g. how much was deposited or withdrawn, or what is the current balance</description>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>