invest-app/main/default/objects/InvestmentUpdate__c/fields/DateOfUpdate__c.field-meta.xml
<CustomField>
    <fullName>DateOfUpdate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>