invest-app/main/default/objects/InvestmentUpdate__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <description>The investment this update belongs to</description>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Investment Updates</relationshipLabel>
    <relationshipName>InvestmentUpdates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>