invest-app/main/default/objects/InvestmentUpdate__c/recordTypes/BalanceUpdate.recordType-meta.xml
<RecordType>
    <fullName>BalanceUpdate</fullName>
    <active>true</active>
    <description>The udpate of current balance of investment</description>
    <label>Balance Update</label>
</RecordType>