invest-app/main/default/objects/InvestmentUpdate__c/recordTypes/Deposit.recordType-meta.xml
<RecordType>
    <fullName>Deposit</fullName>
    <active>true</active>
    <description>Money added to the investment</description>
    <label>Deposit</label>
</RecordType>