invest-app/main/default/objects/InvestmentUpdate__c/recordTypes/Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal</fullName>
    <active>true</active>
    <description>Money taken out</description>
    <label>Withdrawal</label>
</RecordType>